--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdyv1qQesQx48mbCfsmNDtKECA1pBUvZo&amp"></script>
+   </body>
 </html>
